# nonebot-plugin-chatrecorder

./: pyproject.toml
nonebot_plugin_chatrecorder/: __init__.py  message.py  record.py  utils.py
nonebot_plugin_chatrecorder/adapters/: __init__.py  console.py  discord.py  dodo.py  feishu.py  milky.py  onebot_v11.py  onebot_v12.py  qq.py  satori.py  telegram.py
tests/: conftest.py  test_console.py  test_milky.py  test_satori.py  utils.py
